[project]
name = "sessypy"
version = "0.1.14"
authors = [
	{ name="PimDoos" },
]
description = "Python wrapper for Sessy REST API"
readme = "README.md"
license = { file="LICENSE" }

[project.urls]
"Homepage" = "https://github.com/PimDoos/sessypy"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"