[metadata]
name = sessypy
version = 0.1.0
author = PimDoos
url = https://github.com/PimDoos/sessypy
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU GPLv3

[options]
package_dir = 
    =src
packages = find:
install_requires =
    aiohttp>=3.8.4

[options.packages.find]
where=src