[metadata]
name = sessypy
version = 0.1.9
author = PimDoos
url = https://github.com/PimDoos/sessypy
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU GPLv3

[options]
package_dir = 
    =src
packages = find:
install_requires =
    file: requirements.txt

[options.packages.find]
where=src