[metadata]
name = sessypy
version = 0.1.13
author = PimDoos
url = https://github.com/PimDoos/sessypy
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU GPLv3

[options]
package_dir = 
    =src
packages = find:
install_requires=aiohttp>=3.9.4

[options.packages.find]
where=src